# AbovePy

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  stale.yml
ai-dev/: architecture.md  spec.md
ai-dev/decisions/: DL-001-httpx-over-requests.md
ai-dev/guardrails/: coding-standards.md
api/client/: index.html
api/exceptions/: index.html
api/io/: index.html
api/products/: index.html
api/reference/: index.html
api/titiler/: index.html
api/utils/: index.html
arcgis/: AbovePro.pyt
arcgis/tools/: __init__.py  county_download.py  dem_hillshade.py  download_and_load.py  download_tiles.py  find_tiles.py
arcgis/utils/: __init__.py  parameters.py
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md  stac-collections.md
docs/api/: client.md  exceptions.md  io.md  products.md  reference.md  titiler.md  utils.md
docs/stylesheets/: extra.css
docs/tutorials/: arcgis-pro.md  dem-hillshade.md  lidar-access.md  titiler-maps.md  troubleshooting.md
examples/: README.md  docker-compose.yml
examples/notebooks/: batch_download.ipynb  county_explorer.ipynb  dem_analysis.ipynb  flood_risk_analysis.ipynb  lidar_intro.ipynb  multi_product_comparison.ipynb  quickstart.ipynb  web_map_integration.ipynb
examples/scripts/: batch_county_search.py  compare_dem_phases.py  county_ortho_download.py  explore_products.py  export_search_results.py  frankfort_hillshade.py  generate_images.py  generate_images_v2.py  inspect_remote_tile.py  kentucky_river_rem.py  mine_volume_estimate.py  ortho_rgb_extract.py  quickstart.py  stream_window.py  titiler_urls.py
examples/web/: kentucky_explorer.html  titiler_map.html
getting-started/: index.html
search/: search_index.json
src/abovepy/: __init__.py  __main__.py  _constants.py  _download.py  _exceptions.py  _mosaic.py  client.py  download.py  mosaic.py  products.py  stac.py  titiler.py
src/abovepy/io/: __init__.py  cog.py  (+1 more)
stac-collections/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_api.py  test_bbox.py  test_cache.py  test_client.py  test_cog.py  test_crs.py  test_download.py  test_exceptions.py  test_integration.py  test_main.py  test_mosaic.py  test_products.py  test_stac.py  test_titiler.py
tutorials/arcgis-pro/: index.html
tutorials/dem-hillshade/: index.html
tutorials/lidar-access/: index.html
tutorials/titiler-maps/: index.html
tutorials/troubleshooting/: index.html
(+4 files in other folders)
