[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abovepy"
version = "1.0.1"
description = "KyFromAbove LiDAR, DEM, and orthoimagery data access for Python"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Chris Lyons", email = "chris.lyons@ky.gov" },
]
keywords = [
    "geospatial", "gis", "lidar", "dem", "kentucky", "kyfromabove",
    "stac", "cog", "copc", "remote-sensing", "elevation", "orthoimagery",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: OS Independent",
]
dependencies = [
    "pystac-client>=0.7",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "pyproj>=3.6",
    "httpx>=0.25",
    "tqdm>=4.65",
    "shapely>=2.0",
]

[project.optional-dependencies]
lidar = ["laspy>=2.5"]
viz = ["leafmap>=0.30", "matplotlib>=3.8"]
s3 = ["boto3>=1.28"]
all = ["abovepy[lidar,viz,s3]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "respx>=0.20",
    "ruff>=0.3",
    "mypy>=1.8",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
Homepage = "https://github.com/chrislyonsKY/abovepy"
Documentation = "https://chrislyonsKY.github.io/abovepy/"
Repository = "https://github.com/chrislyonsKY/abovepy"
Issues = "https://github.com/chrislyonsKY/abovepy/issues"
Changelog = "https://github.com/chrislyonsKY/abovepy/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = ["src/abovepy"]

[tool.hatch.build.targets.wheel]
packages = ["src/abovepy"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["abovepy"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "osgeo.*",
    "geopandas",
    "pandas",
    "shapely.*",
    "tqdm",
    "laspy",
    "pystac_client",
    "pystac",
    "pyproj",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring network access",
    "slow: full workflow tests",
]
